--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   connectivity_plus: ^6.0.5
   uuid: ^4.5.1
   intl: any
+  flutter_local_notifications: ^17.2.2
+  timezone: ^0.9.4
   
   google_sign_in: ^6.2.1
   file_picker: ^8.0.0
